1. 加入orderList與orderDetail功能

--- a/DemoShoppingWebsite.csproj
+++ b/DemoShoppingWebsite.csproj
@@ -239,6 +239,8 @@
     <Content Include="Views\Home\Login.cshtml" />
     <Content Include="Views\Shared\_LayoutMember.cshtml" />
     <Content Include="Views\Member\ShoppingCar.cshtml" />
+    <Content Include="Views\Member\OrderList.cshtml" />
+    <Content Include="Views\Member\OrderDetail.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
