--- a/Web.config
+++ b/Web.config
@@ -15,10 +15,11 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
   <system.web>
+	<customErrors mode="Off" />
 	  <authentication mode="Forms">
-		  <forms loginUrl="~/Home/Login"/>
-	  </authentication>
-	  <compilation debug="true" targetFramework="4.7.2" />
+	    <forms loginUrl="~/Home/Login" />
+	</authentication>
+	<compilation debug="true" targetFramework="4.7.2" />
     <httpRuntime targetFramework="4.7.2" />
   </system.web>
   <runtime>
@@ -63,9 +64,7 @@
       <compiler language="vb;vbs;visualbasic;vbscript" extension=".vb" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.VBCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=2.0.1.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:default /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+" />
     </compilers>
   </system.codedom>
-  <connectionStrings>
-    <add name="dbShoppingCarEntities" connectionString="metadata=res://*/Models.ShoppingCar.csdl|res://*/Models.ShoppingCar.ssdl|res://*/Models.ShoppingCar.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(LocalDB)\MSSQLLocalDB;attachdbfilename=|DataDirectory|\dbShoppingCar.mdf;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-  </connectionStrings>
+  <connectionStrings><add name="dbShoppingCarEntities" connectionString="metadata=res://*/Models.ShoppingCar.csdl|res://*/Models.ShoppingCar.ssdl|res://*/Models.ShoppingCar.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(LocalDB)\MSSQLLocalDB;attachdbfilename=|DataDirectory|\dbShoppingCar.mdf;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /><add name="dbShoppingCarAzureEntities" connectionString="metadata=res://*/Models.ShoppingCarAzure.csdl|res://*/Models.ShoppingCarAzure.ssdl|res://*/Models.ShoppingCarAzure.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=andydbshoppingwebsite.database.windows.net;initial catalog=C:\USERS\ANDYW\SOURCE\PROJECT_NETFRAMWORK_SHOPPINGWEBSITE\DEMOSHOPPINGWEBSITE\APP_DATA\DBSHOPPINGCAR.MDF;persist security info=True;user id=Andy;password=!QAZxsw2;trustservercertificate=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
       <parameters>
