1. 加密連線到DB的PW

--- a/Web.config
+++ b/Web.config
@@ -13,6 +13,9 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+	<!--注意最後分號;前面少了&quot(雙引號)，因為後面還要再將密碼組合上去，到時候在字串尾端再補上雙引號。-->
+	<add key="db_ConnStr" value="metadata=res://*/Models.ShoppingCarAzure.csdl|res://*/Models.ShoppingCarAzure.ssdl|res://*/Models.ShoppingCarAzure.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=andydbshoppingwebsite.database.windows.net;initial catalog=C:\USERS\ANDYW\SOURCE\PROJECT_NETFRAMWORK_SHOPPINGWEBSITE\DEMOSHOPPINGWEBSITE\APP_DATA\DBSHOPPINGCAR.MDF;persist security info=True;user id=Andy;trustservercertificate=True;MultipleActiveResultSets=True;App=EntityFramework;"/>
+	<add key="db_Pwd" value="+YsPR+T6prw8Ye63FPXWLQ==" />
   </appSettings>
   <system.web>
 	<customErrors mode="Off" />
@@ -64,7 +67,7 @@
       <compiler language="vb;vbs;visualbasic;vbscript" extension=".vb" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.VBCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=2.0.1.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:default /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+" />
     </compilers>
   </system.codedom>
-  <connectionStrings><add name="dbShoppingCarEntities" connectionString="metadata=res://*/Models.ShoppingCar.csdl|res://*/Models.ShoppingCar.ssdl|res://*/Models.ShoppingCar.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(LocalDB)\MSSQLLocalDB;attachdbfilename=|DataDirectory|\dbShoppingCar.mdf;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /><add name="dbShoppingCarAzureEntities" connectionString="metadata=res://*/Models.ShoppingCarAzure.csdl|res://*/Models.ShoppingCarAzure.ssdl|res://*/Models.ShoppingCarAzure.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=andydbshoppingwebsite.database.windows.net;initial catalog=C:\USERS\ANDYW\SOURCE\PROJECT_NETFRAMWORK_SHOPPINGWEBSITE\DEMOSHOPPINGWEBSITE\APP_DATA\DBSHOPPINGCAR.MDF;persist security info=True;user id=Andy;password=!QAZxsw2;trustservercertificate=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
+  <connectionStrings><add name="dbShoppingCarEntities" connectionString="metadata=res://*/Models.ShoppingCar.csdl|res://*/Models.ShoppingCar.ssdl|res://*/Models.ShoppingCar.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(LocalDB)\MSSQLLocalDB;attachdbfilename=|DataDirectory|\dbShoppingCar.mdf;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /><add name="dbShoppingCarAzureEntities" connectionString="metadata=res://*/Models.ShoppingCarAzure.csdl|res://*/Models.ShoppingCarAzure.ssdl|res://*/Models.ShoppingCarAzure.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=andydbshoppingwebsite.database.windows.net;initial catalog=C:\USERS\ANDYW\SOURCE\PROJECT_NETFRAMWORK_SHOPPINGWEBSITE\DEMOSHOPPINGWEBSITE\APP_DATA\DBSHOPPINGCAR.MDF;persist security info=True;user id=Andy;trustservercertificate=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
       <parameters>
