--- a/DemoShoppingWebsite.csproj
+++ b/DemoShoppingWebsite.csproj
@@ -134,6 +134,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\dbShoppingCarAzureEntities.cs" />
     <Compile Include="Models\ShoppingCar.Context.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
